add launch minecraft for unauthorized user